fixed error 7 by using dd new update-binary have device tree provide liblights.
Change-Id: I55ff74bbfc4e29887ec122d6cbd6a9c2a4396861

--- a/recovery.rc
+++ b/recovery.rc
@@ -8,11 +8,13 @@ on init
     export ANDROID_DATA /data
     export ANDROID_CACHE /cache
     export EXTERNAL_STORAGE /sdcard
+    export SECONDARY_STORAGE /external_sd
 
     # clockworkmod recovery.fstab is in /misc
     # symlink /misc /etc
 
     mkdir /sdcard
+    mkdir /external_sd
     mkdir /system
     mkdir /data
     mkdir /cache
