--- a/recovery.rc
+++ b/recovery.rc
@@ -7,14 +7,14 @@ on init
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export ANDROID_CACHE /cache
+    export SECONDARY_STORAGE /emmc
     export EXTERNAL_STORAGE /sdcard
-    export SECONDARY_STORAGE /external_sd
 
     # clockworkmod recovery.fstab is in /misc
     # symlink /misc /etc
 
     mkdir /sdcard
-    mkdir /external_sd
+    mkdir /emmc
     mkdir /system
     mkdir /data
     mkdir /cache
