--- a/init.smdk4210.rc
+++ b/init.smdk4210.rc
@@ -1,12 +1,11 @@
 import init.smdk4210.usb.rc
 
 on early-init
-    export EXTERNAL_STORAGE /mnt/emmc
-    export SECONDARY_STORAGE /mnt/sdcard
+    export SECONDARY_STORAGE /mnt/emmc
+    export EXTERNAL_STORAGE /mnt/sdcard
 
     mkdir /mnt 0775 system system
     mkdir /mnt/sdcard 0775 system system
-    mkdir /mnt/sdcard/external_sd 0775 system system
     mkdir /mnt/emmc 0775 system system
     mkdir /mnt/usbdisk 0775 system system
 
