--- a/recovery.rc
+++ b/recovery.rc
@@ -7,7 +7,7 @@ on init
     export ANDROID_ROOT /system
     export ANDROID_DATA /data
     export ANDROID_CACHE /cache
-    export SECONDARY_STORAGE /emmc
+    export PHONE_STORAGE /emmc
     export EXTERNAL_STORAGE /sdcard
 
     # clockworkmod recovery.fstab is in /misc
@@ -22,7 +22,7 @@ on init
     mkdir /efs
     mkdir /tmp
     mkdir /mnt 0775 root root
-	mount /tmp /tmp tmpfs
+    mount /tmp /tmp tmpfs
 
 on fs
     mount ext4 /dev/block/mmcblk0p9 /system noatime wait
