--- a/init.smdk4210.rc
+++ b/init.smdk4210.rc
@@ -5,9 +5,9 @@ on early-init
     export EXTERNAL_STORAGE /mnt/sdcard
 
     mkdir /mnt 0775 system system
-    mkdir /mnt/sdcard 0775 system system
-    mkdir /mnt/emmc 0775 system system
-    mkdir /mnt/usbdisk 0775 system system
+    mkdir /mnt/sdcard 0000 system system
+    mkdir /mnt/emmc 0000 system system
+    mkdir /mnt/usbdisk 0000 system system
 
     mkdir /efs 0771 radio system
     mkdir /preload 0771 system system
@@ -37,9 +37,9 @@ on fs
 # mount ext4 partitions
     mount ext4 /dev/block/mmcblk0p9 /system noatime wait ro
     mount ext4 /dev/block/mmcblk0p7 /cache nosuid nodev noatime wait
-    mount ext4 /dev/block/mmcblk0p10 /data nosuid nodev noatime wait 
+    mount ext4 /dev/block/mmcblk0p10 /data nosuid nodev noatime wait noauto_da_alloc
     mount ext4 /dev/block/mmcblk0p12 /preload nosuid nodev noatime wait
-
+    
     mount ext4 /dev/block/mmcblk0p1 /efs nosuid nodev noatime wait
     mkdir /efs/bluetooth
     mkdir /efs/wifi
@@ -50,11 +50,9 @@ on fs
 
     mkdir /data/misc/vpn/profiles 0770 system system
     mkdir /data/misc/radio 0775 radio system
-    chmod 0770 /data/misc/wifi
+    chmod 0770 /data/misc/wifi 
 
 on post-fs-data
-# bind external sd
-    mount -o bind /mnt/emmc /mnt/sdcard/external_sd
 
 # GPS
     chown root system /dev/ttySAC1
@@ -73,10 +71,12 @@ on post-fs-data
     mkdir /data/misc/wifi/sockets 0770 wifi wifi
     mkdir /data/misc/dhcp 0770 dhcp dhcp
     chown dhcp dhcp /data/misc/dhcp
-
-# LED Light Triggers
-    chown system system /sys/class/leds/red/trigger
-    chown system system /sys/class/leds/blue/trigger
+	
+# Device control nodes for WiMAX
+	exec /system/xbin/busybox mknod -m 0660 /dev/swmxctl c 234 0
+	exec /system/xbin/busybox mknod -m 0660 /dev/uwibro c 233 0
+	chown system system /dev/swmxctl
+	chown system system /dev/uwibro 
 
 #DRM directory creation
     mkdir /system/etc/security/.drm 0775
@@ -216,11 +216,15 @@ on post-fs-data
 
     chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_firm_version_panel
     chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_firm_version_phone
-    chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_firm_update_status
-    chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_firm_update
+    chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_firm_update_status 
+    chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_firm_update 
     chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_threshold
     chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_config_version
     chown system radio /sys/devices/virtual/sec/sec_touchscreen/tsp_touchtype
+	
+    chown system system /sys/class/leds/red/trigger
+    chown system system /sys/class/leds/blue/trigger
+    chown system system /sys/class/leds/green/trigger
 
 # Permissions for bluetooth
     setprop ro.bt.bdaddr_path "/efs/bluetooth/bt_addr"
@@ -230,12 +234,6 @@ on post-fs-data
     chmod 0660 /sys/class/rfkill/rfkill0/state
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/state
     chown bluetooth bluetooth /sys/class/rfkill/rfkill0/type
-
-on property:ril.cdma.data_state=1
-     restart pppd_cdma
-
-on property:ril.cdma.data_state=0
-    stop pppd_cdma
 
 # Vibetonz
     chmod 0660 /dev/tspdrv
@@ -274,7 +272,7 @@ on property:ril.cdma.data_state=0
 # Permission for radio
     chown system radio /sys/devices/platform/s5p-ehci/ehci_power
     chown system radio /sys/devices/platform/s5p-ehci/ehci_runtime
-    chown system radio /sys/devices/virtual/misc/multipdp/waketime
+    chown system radio /sys/devices/virtual/misc/multipdp/waketime    
 
 # for datarouter
     chown system system /dev/dun
@@ -287,31 +285,31 @@ on property:ril.cdma.data_state=0
     write /sys/devices/system/cpu/cpufreq/ondemand/down_differential 5
     write /sys/devices/system/cpu/cpufreq/ondemand/up_threshold 85
 
-on boot
-    chown system system /sys/class/backlight/pwm-backlight/brightness
-    chmod 0660 /sys/class/backlight/pwm-backlight/brightness
-    chown radio system /sys/devices/virtual/misc/melfas_touchkey/brightness
-    chmod 0660 /sys/devices/virtual/misc/melfas_touchkey/brightness
-
 #panorama directory creation
     mkdir /data/pxtmpdir 0775
     chown system system /data/pxtmpdir
     chmod 0775 /data/pxtmpdir
+
+# backlight permissions
+    chown system system /sys/class/backlight/pwm-backlight/brightness
+    chmod 0660 /sys/class/backlight/pwm-backlight/brightness
+    chown radio system /sys/devices/virtual/misc/melfas_touchkey/brightness
+    chmod 0660 /sys/devices/virtual/misc/melfas_touchkey/brightness
 
 # Permissions for dvfs lock
     chown system system /sys/power/cpufreq_max_limit
     chown system system /sys/power/cpufreq_min_limit
     chmod 0660 /sys/power/cpufreq_max_limit
     chmod 0660 /sys/power/cpufreq_min_limit
+	
+on property:ril.cdma.data_state=1
+	restart pppd_cdma
 
+on property:ril.cdma.data_state=0
+    stop pppd_cdma
+	
     chown system system /sys/power/gpu_lock
     chmod 0660 /sys/power/gpu_lock
-
-    mount debugfs /sys/kernel/debug /sys/kernel/debug
-
-    setprop ro.build.product SPH-D710
-    setprop ro.product.device SPH-D710
-    setprop ro.radio.noril yes
 
 # Permisions for sensors
     chown radio system /sys/devices/virtual/K3G_GYRO-dev/k3g/gyro_selftest
@@ -323,6 +321,13 @@ on boot
 # for device encryption
     setprop vold.post_fs_data_done 1
 
+on boot
+    mount debugfs /sys/kernel/debug /sys/kernel/debug
+
+    setprop ro.build.product SPH-D710
+    setprop ro.product.device SPH-D710
+    setprop ro.radio.noril yes
+
 # permissions for NFC
     setprop ro.nfc.port "I2C"
     chmod 0600 /dev/pn544
@@ -330,12 +335,78 @@ on boot
 
 # Device Encryption by B2B Security Lab. 
     setprop ro.crypto.keyfile.userdata /efs/metadata
-    
+
 # fake some battery state
     setprop status.battery.state Slow
     setprop status.battery.level 5
     setprop status.battery.level_raw  50
     setprop status.battery.level_scale 9
+	
+    setprop net.tcp.buffersize.wimax   4096,524288,1048576,4096,16384,110208
+	
+# +++++++++++++++++++++++++++++++++++++++++++
+# for datarouter
+    chown system system /dev/ttyGS0
+    chown system system /dev/dun
+# +++++++++++++++++++++++++++++++++++++++++++
+
+# USB HUB : system properties are linked with sysfs
+#  bit :    3     2      1         0
+#          AP,   CP, WIMAX, RESERVED
+# Enable AP, CP, WIMAX
+
+on property:persist.service.usb.hubport=0
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_wimax
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_cp
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_ap
+	write /sys/class/sec/switch/set_usb_path ALL
+on property:persist.service.usb.hubport=2
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_wimax
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_cp
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_ap
+	write /sys/class/sec/switch/set_usb_path ALL
+on property:persist.service.usb.hubport=4
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_wimax
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_cp
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_ap
+	write /sys/class/sec/switch/set_usb_path AP
+on property:persist.service.usb.hubport=6
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_wimax
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_cp
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_ap
+	write /sys/class/sec/switch/set_usb_path AP
+on property:persist.service.usb.hubport=8
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_wimax
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_cp
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_ap
+	write /sys/class/sec/switch/set_usb_path CP
+on property:persist.service.usb.hubport=10
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_wimax
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enalbe_cp
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_ap
+	write /sys/class/sec/switch/set_usb_path CP
+on property:persist.service.usb.hubport=12
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port enable_wimax
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_cp
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_ap
+on property:persist.service.usb.hubport=14
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_wimax
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_cp
+	write /sys/devices/platform/i2c-gpio.17/i2c-17/17-0008/port disable_ap
+
+#Wimax 
+    chmod 660 /dev/swmxctl
+    chmod 660 /dev/uwibro
+    chown system system /dev/swmxctl
+    chown system system /dev/uwibro	
+	
+#SISO Data Call Changes S
+service pppd_cdma /system/bin/pppd_runner
+   user root
+   group radio cache inet misc system
+   disabled
+   oneshot
+#SISO Data Call Changes E
 
 service wpa_supplicant /system/bin/wpa_supplicant \
     -Dnl80211 -puse_p2p_group_interface=1 -e/data/misc/wifi/entropy.bin
@@ -363,14 +434,29 @@ service iprenew_p2p /system/bin/dhcpcd -n
     class main
     disabled
     oneshot
-
-service pppd_cdma /system/bin/pppd_runner
+	
+# Wimax changes
+service dhcpcd_uwbr0 /system/bin/dhcpcd -ABKL
     class main
-    user root
-    group radio cache inet misc system
     disabled
     oneshot
 
+# wimax
+service iprenew_uwbr0 /system/bin/dhcpcd -n
+    class main
+    disabled
+    oneshot
+	
+service gpsd /system/bin/gpsd
+    class main
+    user gps
+    group system inet
+	
+service gpsfix /system/bin/gpsfix
+    class main
+    user root
+    group root
+    oneshot
 
 # for bluetooth
 service hciattach /system/bin/brcm_patchram_plus --enable_hci --enable_lpm --no2bytes --tosleep 50000 \
@@ -388,24 +474,6 @@ service bdaddr /system/bin/bdaddr_read
     user root
     disabled
     oneshot
-
-# Wimax changes
-service dhcpcd_uwbr0 /system/bin/dhcpcd -ABKL
-    class main
-    disabled
-    oneshot
-
-# wimax
-service iprenew_uwbr0 /system/bin/dhcpcd -n
-    class main
-    disabled
-    oneshot
-
-# GPS
-service gpsd /system/bin/gpsd
-    class main   
-    user system
-    group system inet
 
 # TVout
 service TvoutService_C /system/bin/bintvoutservice
